# CMFA

./: .gitignore  README.md  build.gradle.kts  gradle.properties
.github/ISSUE_TEMPLATE/: 01-bug-report-en.yml  03-bug-report-zh-cn.yml
.github/workflows/: build-pre-release.yaml  build-release.yaml  update-dependencies.yaml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/java/com/github/kr328/clash/: BaseActivity.kt  LogcatService.kt  MainActivity.kt  MainApplication.kt  NewProfileActivity.kt  PropertiesActivity.kt  ProvidersActivity.kt  ProxyActivity.kt
app/src/main/java/com/github/kr328/clash/util/: Remote.kt
app/src/main/kotlin/com/github/kr328/clash/: AccessControlActivity.kt  FilesActivity.kt  MainApplication.kt  ProvidersActivity.kt  ProxyActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
common/: build.gradle.kts
core/: .gitignore  build.gradle.kts
core/src/foss/golang/: go.mod  go.sum
core/src/main/cpp/: CMakeLists.txt  main.c
core/src/main/golang/: go.mod  go.sum
core/src/main/golang/native/: tunnel.go
core/src/main/golang/native/tunnel/: providers.go  proxies.go
core/src/main/java/com/github/kr328/clash/core/: Clash.kt
design/: build.gradle.kts
design/src/main/java/com/github/kr328/clash/design/: AccessControlDesign.kt  ApkBrokenDesign.kt  AppCrashedDesign.kt  AppSettingsDesign.kt  (+16 more)
design/src/main/res/drawable/: bg_bottom_sheet.xml  bg_drag_indicator.xml  bg_group_item_themed.xml  bg_proxy_pinned.xml  ic_baseline_adb.xml  ic_baseline_apps.xml  ic_baseline_arrow_drop_down.xml  ic_baseline_assignment.xml  ic_baseline_attach_file.xml  ic_baseline_brightness_4.xml  ic_baseline_clear_all.xml  ic_baseline_domain.xml  ic_baseline_extension.xml  ic_baseline_help_center.xml  ic_baseline_hide.xml  ic_baseline_meta.xml  ic_baseline_publish.xml  ic_baseline_stop.xml  ic_baseline_swap_vert.xml  ic_baseline_swap_vertical_circle.xml  ic_baseline_vpn_lock.xml  ic_baseline_work.xml  ic_clash.xml  ic_outline_article.xml  ic_outline_folder.xml  ic_outline_inbox.xml  ic_outline_label.xml  ic_outline_not_interested.xml  ic_outline_update.xml  rounded_top_background.xml
design/src/main/res/layout/: adapter_app.xml  adapter_editable_text_list.xml  adapter_editable_text_map.xml  adapter_file.xml  adapter_log_message.xml  adapter_profile.xml  adapter_profile_provider.xml  adapter_provider.xml  adapter_proxy.xml  adapter_sideload_provider.xml  common_activity_bar.xml  common_recycler_list.xml  component_action_label.xml  component_action_text_field.xml  component_large_action_label.xml  component_large_action_label_menu.xml  component_large_action_label_menu_delete.xml  design_about.xml  design_access_control.xml  design_app_crashed.xml  design_files.xml  design_logcat.xml  design_logs.xml  design_main.xml  design_new_profile.xml  design_profiles.xml  design_properties.xml  design_providers.xml  design_proxy.xml  design_settings.xml  design_settings_common.xml  design_settings_meta_feature.xml  design_settings_overide.xml  dialog_editable_map_text_field.xml  dialog_fetch_status.xml  dialog_files_menu.xml  dialog_files_popup.xml  dialog_group_select.xml  dialog_groups_menu.xml  dialog_preference_list.xml  (+8 more)
design/src/main/res/menu/: menu_access_control.xml
design/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml  themes.xml
design/src/main/res/values-ja-rJP/: strings.xml
design/src/main/res/values-ko-rKR/: strings.xml
design/src/main/res/values-ru/: strings.xml
design/src/main/res/values-vi/: strings.xml
design/src/main/res/values-zh/: strings.xml
design/src/main/res/values-zh-rHK/: strings.xml
design/src/main/res/values-zh-rTW/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hideapi/src/main/res/values/: strings.xml
service/: build.gradle.kts
(+191 files in other folders)
